--- a/index.html
+++ b/index.html
@@ -5,35 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- Header section -->
-    <header>
-      <nav>
-        <a href="./index.html">
-          <span>WEB</span>
+    <header class="page-header">
+      <nav class="page-nav">
+        <a class="page-logo link" href="./index.html">
+          <span class="page-logo-web">WEB</span>
           STUDIO
         </a>
-        <ul>
-          <li>
-            <a href="./index.html">Studio</a>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a href="./portfolio.html">Portfolio</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
-            <a href="">Contacts</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="contacts">
+        <ul class="contacts-list list">
+          <li class="contacts-item">
+            <a class="contacts-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="contacts-item">
+            <a class="contacts-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -41,38 +51,40 @@
     <!--Main section-->
     <main>
       <!-- Hero section -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero-section">
+        <h1 class="hero-section-header">
+          Effective Solutions for Your Business
+        </h1>
+        <button class="modal-btn" type="button">Order Service</button>
       </section>
       <!-- Services section -->
-      <section>
-        <h2 hidden>Services of Webstudio</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="services-section">
+        <h2 class="services-section-header" hidden>Services of Webstudio</h2>
+        <ul class="services-section-list list">
+          <li class="services-section-item">
+            <h3 class="services-secondary-header">Strategy</h3>
+            <p class="services-section-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="services-section-item">
+            <h3 class="services-secondary-header">Punctuality</h3>
+            <p class="services-section-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="services-section-item">
+            <h3 class="services-secondary-header">Diligence</h3>
+            <p class="services-section-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="services-section-item">
+            <h3 class="services-secondary-header">Technologies</h3>
+            <p class="services-section-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -80,27 +92,30 @@
         </ul>
       </section>
       <!-- Gallery section -->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <section class="gallery-section">
+        <h2 class="gallery-section-header">What are we doing</h2>
+        <ul class="gallery-section-list list">
+          <li class="gallery-section-item">
             <img
+              class="gallery-section-img"
               src="./images/gallery-section/img_1.jpg"
               alt="Desktop computer"
               width="360"
               height="300"
             />
           </li>
-          <li>
+          <li class="gallery-section-item">
             <img
+              class="gallery-section-img"
               src="./images/gallery-section/img_2.jpg"
               alt="Smartphone"
               width="360"
               height="300"
             />
           </li>
-          <li>
+          <li class="gallery-section-item">
             <img
+              class="gallery-section-img"
               src="./images/gallery-section/img_3.jpg"
               alt="Smartphone on the background of the laptop"
               width="360"
@@ -110,59 +125,63 @@
         </ul>
       </section>
       <!-- Team section -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team-section">
+        <h2 class="team-section-header">Our Team</h2>
+        <ul class="team-section-list list">
+          <li class="team-section-item">
             <img
+              class="team-section-img"
               src="./images/team/img1.jpg"
               alt="Product Designer Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-section-names">Mark Guerrero</h3>
+            <p class="team-section-posittion">Product Designer</p>
           </li>
-          <li>
+          <li class="team-section-item">
             <img
+              class="team-section-img"
               src="./images/team/img2.jpg"
               alt="Frontend Developer Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-section-names">Tom Ford</h3>
+            <p class="team-section-posittion">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-section-item">
             <img
+              class="team-section-img"
               src="./images/team/img3.jpg"
               alt="Marketing Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-section-names">Camila Garcia</h3>
+            <p class="team-section-posittion">Marketing</p>
           </li>
-          <li>
+          <li class="team-section-item">
             <img
+              class="team-section-img"
               src="./images/team/img4.jpg"
               alt="UI Designer Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-section-names">Daniel Wilson</h3>
+            <p class="team-section-posittion">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer section -->
-    <footer>
-      <a href="./index.html">
-        <span>WEB</span>
+    <footer class="footer-section">
+      <a class="footer-logo link" href="./index.html">
+        <span class="footer-logo-web">WEB</span>
         STUDIO
       </a>
-      <p>
+      <p class="footer-section-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
