--- a/portfolio.html
+++ b/portfolio.html
@@ -5,34 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- Header section -->
-    <header>
-      <nav>
-        <a href="./index.html">
-          <span>WEB</span>
+    <header class="page-header">
+      <nav class="page-nav">
+        <a class="page-logo link" href="./index.html">
+          <span class="page-logo-web">WEB</span>
           STUDIO
         </a>
-        <ul>
-          <li>
-            <a href="./index.html">Studio</a>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a href="./portfolio.html">Portfolio</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
-            <a href="">Contacts</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="contacts">
+        <ul class="contacts-list list">
+          <li class="contacts-item">
+            <a class="contacts-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="contacts-item">
+            <a class="contacts-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -41,97 +52,139 @@
     <main>
       <h1 hidden>Portfolio</h1>
       <!-- Filters -->
-      <section>
+      <section class="filters-menu">
         <h2 hidden>Filters</h2>
-        <ul>
-          <li>
-            <button type="button">All</button>
+        <ul class="filters-list list">
+          <li class="filters-item">
+            <button class="filters-btn" type="button">All</button>
           </li>
-          <li>
-            <button type="button">Web Site</button>
+          <li class="filters-item">
+            <button class="filters-btn" type="button">Web Site</button>
           </li>
-          <li>
-            <button type="button">App</button>
+          <li class="filters-item">
+            <button class="filters-btn" type="button">App</button>
           </li>
-          <li>
-            <button type="button">Design</button>
+          <li class="filters-item">
+            <button class="filters-btn" type="button">Design</button>
           </li>
-          <li>
-            <button type="button">Marketing</button>
+          <li class="filters-item">
+            <button class="filters-btn" type="button">Marketing</button>
           </li>
         </ul>
       </section>
       <!-- Row 1 -->
       <section>
         <h2 hidden>Row1</h2>
-        <ul>
-          <li>
-            <img src="" alt="" />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+        <ul class="portfolio-list list">
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/row-images/row-1/img-1.jpg"
+              alt="Pages of bank app interface"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subheader">Banking App Interface Concept</h3>
+            <p class="portfolio-sphere">App</p>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/row-images/row-1/img-2.jpg"
+              alt="Smartphone"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subheader">Cashless Payment</h3>
+            <p class="portfolio-sphere">Marketing</p>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h3>Meditaion App</h3>
-            <p>App</p>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/row-images/row-1/img-3.jpg"
+              alt="Notebook"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subheader">Meditaion App</h3>
+            <p class="portfolio-sphere">App</p>
           </li>
-        </ul>
-      </section>
-      <!-- Row 2 -->
-      <section>
-        <h2 hidden>Row2</h2>
-        <ul>
-          <li>
-            <img src="" alt="" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/row-images/row-2/img-1.jpg"
+              alt="The front panel of the car"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subheader">Taxi Service</h3>
+            <p class="portfolio-sphere">Marketing</p>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/row-images/row-2/img-2.jpg"
+              alt="Screen themes"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subheader">Screen Illustrations</h3>
+            <p class="portfolio-sphere">Design</p>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/row-images/row-2/img-3.jpg"
+              alt="Girl"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subheader">Online Courses</h3>
+            <p class="portfolio-sphere">Marketing</p>
           </li>
-        </ul>
-      </section>
-      <!-- Row 3 -->
-      <section>
-        <h2 hidden>Row3</h2>
-        <ul>
-          <li>
-            <img src="" alt="" />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/row-images/row-3/img-1.jpg"
+              alt="Instagram Stories Concept"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subheader">Instagram Stories Concept</h3>
+            <p class="portfolio-sphere">Design</p>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/row-images/row-3/img-2.jpg"
+              alt="Woman with groceries"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subheader">Organic Food</h3>
+            <p class="portfolio-sphere">Web Site</p>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/row-images/row-3/img-3.jpg"
+              alt="Latte art"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subheader">Fresh Coffee</h3>
+            <p class="portfolio-sphere">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer section -->
-    <footer>
-      <a href="./index.html">
-        <span>WEB</span>
+    <footer class="footer-section">
+      <a class="footer-logo link" href="./index.html">
+        <span class="footer-logo-web">WEB</span>
         STUDIO
       </a>
-      <p>
+      <p class="footer-section-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
