--- a/index.html
+++ b/index.html
@@ -51,40 +51,38 @@
     <!--Main section-->
     <main>
       <!-- Hero section -->
-      <section class="hero-section">
-        <h1 class="hero-section-header">
-          Effective Solutions for Your Business
-        </h1>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="modal-btn" type="button">Order Service</button>
       </section>
       <!-- Services section -->
-      <section class="services-section">
-        <h2 class="services-section-header" hidden>Services of Webstudio</h2>
-        <ul class="services-section-list list">
-          <li class="services-section-item">
-            <h3 class="services-secondary-header">Strategy</h3>
-            <p class="services-section-text">
+      <section class="services">
+        <h2 class="services-header" hidden>Services of Webstudio</h2>
+        <ul class="services-list list">
+          <li class="services-item">
+            <h3 class="section-subtitle">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="services-section-item">
-            <h3 class="services-secondary-header">Punctuality</h3>
-            <p class="services-section-text">
+          <li class="services-item">
+            <h3 class="section-subtitle">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="services-section-item">
-            <h3 class="services-secondary-header">Diligence</h3>
-            <p class="services-section-text">
+          <li class="services-item">
+            <h3 class="section-subtitle">Diligence</h3>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="services-section-item">
-            <h3 class="services-secondary-header">Technologies</h3>
-            <p class="services-section-text">
+          <li class="services-item">
+            <h3 class="section-subtitle">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -92,30 +90,30 @@
         </ul>
       </section>
       <!-- Gallery section -->
-      <section class="gallery-section">
-        <h2 class="gallery-section-header">What are we doing</h2>
-        <ul class="gallery-section-list list">
-          <li class="gallery-section-item">
+      <section class="gallery">
+        <h2 class="section-header">What are we doing</h2>
+        <ul class="gallery-list list">
+          <li class="gallery-item">
             <img
-              class="gallery-section-img"
+              class="gallery-img"
               src="./images/gallery-section/img_1.jpg"
               alt="Desktop computer"
               width="360"
               height="300"
             />
           </li>
-          <li class="gallery-section-item">
+          <li class="gallery-item">
             <img
-              class="gallery-section-img"
+              class="gallery-img"
               src="./images/gallery-section/img_2.jpg"
               alt="Smartphone"
               width="360"
               height="300"
             />
           </li>
-          <li class="gallery-section-item">
+          <li class="gallery-item">
             <img
-              class="gallery-section-img"
+              class="gallery-img"
               src="./images/gallery-section/img_3.jpg"
               alt="Smartphone on the background of the laptop"
               width="360"
@@ -125,63 +123,63 @@
         </ul>
       </section>
       <!-- Team section -->
-      <section class="team-section">
-        <h2 class="team-section-header">Our Team</h2>
-        <ul class="team-section-list list">
-          <li class="team-section-item">
+      <section class="team">
+        <h2 class="section-header">Our Team</h2>
+        <ul class="team-list list">
+          <li class="team-item">
             <img
-              class="team-section-img"
+              class="team-img"
               src="./images/team/img1.jpg"
               alt="Product Designer Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3 class="team-section-names">Mark Guerrero</h3>
-            <p class="team-section-posittion">Product Designer</p>
+            <h3 class="section-subtitle">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
           </li>
-          <li class="team-section-item">
+          <li class="team-item">
             <img
-              class="team-section-img"
+              class="team-img"
               src="./images/team/img2.jpg"
               alt="Frontend Developer Tom Ford"
               width="264"
               height="260"
             />
-            <h3 class="team-section-names">Tom Ford</h3>
-            <p class="team-section-posittion">Frontend Developer</p>
+            <h3 class="section-subtitle">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
           </li>
-          <li class="team-section-item">
+          <li class="team-item">
             <img
-              class="team-section-img"
+              class="team-img"
               src="./images/team/img3.jpg"
               alt="Marketing Camila Garcia"
               width="264"
               height="260"
             />
-            <h3 class="team-section-names">Camila Garcia</h3>
-            <p class="team-section-posittion">Marketing</p>
+            <h3 class="section-subtitle">Camila Garcia</h3>
+            <p class="text">Marketing</p>
           </li>
-          <li class="team-section-item">
+          <li class="team-item">
             <img
-              class="team-section-img"
+              class="team-img"
               src="./images/team/img4.jpg"
               alt="UI Designer Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3 class="team-section-names">Daniel Wilson</h3>
-            <p class="team-section-posittion">UI Designer</p>
+            <h3 class="section-subtitle">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer section -->
-    <footer class="footer-section">
+    <footer class="footer">
       <a class="footer-logo link" href="./index.html">
         <span class="footer-logo-web">WEB</span>
         STUDIO
       </a>
-      <p class="footer-section-text">
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
