--- a/portfolio.html
+++ b/portfolio.html
@@ -50,10 +50,9 @@
     </header>
     <!-- Main section -->
     <main>
-      <h1 hidden>Portfolio</h1>
       <!-- Filters -->
       <section class="filters-menu">
-        <h2 hidden>Filters</h2>
+        <h1 hidden>Portfolio</h1>
         <ul class="filters-list list">
           <li class="filters-item">
             <button class="filters-btn" type="button">All</button>
@@ -71,10 +70,7 @@
             <button class="filters-btn" type="button">Marketing</button>
           </li>
         </ul>
-      </section>
-      <!-- Row 1 -->
-      <section>
-        <h2 hidden>Row1</h2>
+        <!-- Portfolio -->
         <ul class="portfolio-list list">
           <li class="portfolio-item">
             <img
@@ -84,8 +80,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subheader">Banking App Interface Concept</h3>
-            <p class="portfolio-sphere">App</p>
+            <h2 class="section-subtitle">Banking App Interface Concept</h2>
+            <p class="text">App</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -95,8 +91,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subheader">Cashless Payment</h3>
-            <p class="portfolio-sphere">Marketing</p>
+            <h2 class="section-subtitle">Cashless Payment</h2>
+            <p class="text">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -106,8 +102,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subheader">Meditaion App</h3>
-            <p class="portfolio-sphere">App</p>
+            <h2 class="section-subtitle">Meditaion App</h2>
+            <p class="text">App</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -117,8 +113,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subheader">Taxi Service</h3>
-            <p class="portfolio-sphere">Marketing</p>
+            <h2 class="section-subtitle">Taxi Service</h2>
+            <p class="text">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -128,8 +124,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subheader">Screen Illustrations</h3>
-            <p class="portfolio-sphere">Design</p>
+            <h2 class="section-subtitle">Screen Illustrations</h2>
+            <p class="text">Design</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -139,8 +135,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subheader">Online Courses</h3>
-            <p class="portfolio-sphere">Marketing</p>
+            <h2 class="section-subtitle">Online Courses</h2>
+            <p class="text">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -150,8 +146,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subheader">Instagram Stories Concept</h3>
-            <p class="portfolio-sphere">Design</p>
+            <h2 class="section-subtitle">Instagram Stories Concept</h2>
+            <p class="text">Design</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -161,8 +157,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subheader">Organic Food</h3>
-            <p class="portfolio-sphere">Web Site</p>
+            <h2 class="section-subtitle">Organic Food</h2>
+            <p class="text">Web Site</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -172,19 +168,19 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subheader">Fresh Coffee</h3>
-            <p class="portfolio-sphere">Web Site</p>
+            <h2 class="section-subtitle">Fresh Coffee</h2>
+            <p class="text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer section -->
-    <footer class="footer-section">
+    <footer class="footer">
       <a class="footer-logo link" href="./index.html">
         <span class="footer-logo-web">WEB</span>
         STUDIO
       </a>
-      <p class="footer-section-text">
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
